jEdit 5.5 version history
       (changes since jEdit 5.4.0)
:encoding=UTF-8:

{{{ Version 5.5pre1

Thanks to Björn "Vampire" Kautler, AdamS, Wim West, M. Cesar R. Lacruz,
Egor Abramovich, Hrotkó Gábor, Alan Ezust, Dale Anson, Roman Tsourick,
Rafal Kolanski, Uwe Stöhr, Matthieu Casanova, A. Vontobel and Jesse Pavel for
contributing to this release.

{{{ Bug Fixes

- Fix jEdit backup filename recognition (Björn "Vampire" Kautler)

- Do not use translated strings to match log lines within activity.log in
  Make_Bug_Report.bsh (Björn "Vampire" Kautler)

- Support Java 9 and newer in the Windows EXE launcher
  (Bug #4064 - Björn "Vampire" Kautler)

- Fix splash screen progress call count not being equal in all code branches /
  parameter combinations (Björn "Vampire" Kautler)

- Fix splash screen progress count, so that the progress bar finally reaches
  the right end (Björn "Vampire" Kautler)

- Fix a bug preventing jEdit from loading when a buffer has an invalid
  selection and is loaded in two edit panes (Matthieu Casanova)

- RegisterViewer editable contentPane fixed (Patch #598, Jesse Pavel)

- Command line behavior for +line fixed (Patch #590 - Wim West)

- Autosave Untitled Buffers is now persistent across sessions
  (Feature Request #501, Patch #596, Patch #614, Fix Bug #4059 - Hrotkó Gábor)

- Fixed a number of bugs in the new jEdit printing system (Dale Anson)

- Add missing local properties to Insert_Buffer_Properties macro
  (Patch #599 - Jesse Pavel)

- Fixed an issue with the activity log viewer so that setting the number of
  lines in the log actually works. (Dale Anson)

- Fix for bug #3971, exception trying to set WM_CLASS. (Dale Anson)

- Fix for bug #4047, illegal reflective access operation with Java 9.
  (Dale Anson)

- Fix Bug #4011, The Cut Lines macro gives exception if the cursor is beyond
  text area (Patch #600, Roman Tsourick)

- Fix for bug #541, let ESC key close the print dialog. (Dale Anson)

}}}
{{{ UI Improvements
